--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -198,6 +198,7 @@
                     <Setter Property="PaneBackground" Value="{StaticResource Left_Panel_Title_BG}"/>
                 </Style>
             </SplitView.Style>
+            
             <!--SIDE BAR MENU-->
             <SplitView.Pane>
                 <Grid Name="QuickViewGrid" BorderThickness="0 0 0 0" Background="Transparent">
@@ -697,10 +698,11 @@
                                Padding=" 0 0 10 0" FontSize="20" FontFamily="Segoe UI" 
                                FontWeight="ExtraBold" Foreground="Black" Opacity="0.2">Handwriting Mode</TextBlock>
 
-                    <StackPanel Spacing="2" Background="White" Name="pageIndexPanel"  Margin="0 0 0 0" 
-                                RelativePanel.Above="modeTextBlock" Orientation="Horizontal"  
+                    <StackPanel Spacing="2" Background="Transparent" Name="pageIndexPanel"  Margin="0 10 0 10" 
+                                Orientation="Horizontal"  
+                                RelativePanel.AlignBottomWithPanel="True"
                                 RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 0 0 0"
-                                Canvas.ZIndex="999">
+                                Canvas.ZIndex="90">
                         
                         <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
                             <SymbolIcon Symbol="Add" Foreground="{StaticResource Button_Background}" />
@@ -761,11 +763,9 @@
                                 <ListView.ItemTemplate>
                                     <DataTemplate x:DataType="phenotypeservice:Phenotype">
 
-                                                
-                                                <customcontrol:PhenotypeBriefControl VerticalAlignment="Center" phenotypeName="{x:Bind name}" 
-                                                                             phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
-                                                                             sourceType="{x:Bind sourceType}" presentPosition="List" />
-
+                                        <customcontrol:PhenotypeBriefControl VerticalAlignment="Center" phenotypeName="{x:Bind name}" 
+                                                                        phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
+                                                                        sourceType="{x:Bind sourceType}" presentPosition="List" />
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                                 <!--Defining the phenotype candidate tile style-->
@@ -860,9 +860,7 @@
                         Grid.Row="3" Grid.Column="1" RequestedTheme="Default"
                         VerticalAlignment="Center" HorizontalAlignment="Center"
                               Click="BluetoothButton_Click"  IsEnabled="True"/>
-                -->
-
-                           
+                -->                        
 
                             <Image Name="StreamImageView" Width="300" Height="200" 
                           Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center"
