--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -4,12 +4,21 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:phenotypeservice="using:PhenoPad.PhenotypeService"
+    xmlns:customcontrol="using:PhenoPad.CustomControl"
     mc:Ignorable="d"
     VerticalAlignment="Stretch" 
     HorizontalAlignment="Stretch"
     Loaded="Page_Loaded">
 
     <UserControl.Resources>
+        <Storyboard x:Name="curWordPhenoAnimation">
+            <DoubleAnimation Storyboard.TargetName="phenoCtrlSlide" 
+                                 Storyboard.TargetProperty="Y"
+                                 By="-45"
+                                 Duration="0:0:0.1" />
+        </Storyboard>
+
         <Flyout x:Key="ChangeAlternativeFlyout" Placement="Top">
             <StackPanel Padding="0" Margin="3" Width="auto">
                 <ListView x:Name="alternativeListView" IsItemClickEnabled="True"
@@ -196,12 +205,86 @@
                     </Button>
                 </Grid>
             </StackPanel>
-
-            
+         
             <!--Cursor Icon Markup-->
             <Grid x:Name="inputMarkup" Visibility="Collapsed">
                 <FontIcon FontWeight="ExtraBold" FontSize="40" Glyph="&#xE878;" Foreground="DodgerBlue"/>
             </Grid>
+
+            <Grid x:Name="curWordPhenoControlGrid" Height="40" HorizontalAlignment="Right" 
+                                  Background="WhiteSmoke"  Padding="5" BorderBrush="LightGray" BorderThickness="0" 
+                                  CornerRadius="10">
+                <Grid.RenderTransform>
+                    <TranslateTransform x:Name="phenoCtrlSlide" Y="0" />
+                </Grid.RenderTransform>
+                <ListView  Padding="0 0 0 0" IsItemClickEnabled="False"
+                                          ScrollViewer.HorizontalScrollMode="Enabled"
+                                          ScrollViewer.VerticalScrollMode="Disabled"
+                                          ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                                          ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                                          ScrollViewer.IsHorizontalRailEnabled="True"
+                                          x:Name="curLineCandidatePhenoListView" ItemsSource="{x:Bind curLineCandidatePheno, Mode=OneWay}">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel  Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="phenotypeservice:Phenotype">
+                            <customcontrol:PhenotypeBriefControl phenotypeName="{x:Bind name}" 
+                                                                                 phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
+                                                                                 sourceType="{x:Bind sourceType}" presentPosition="Inline" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                            <Setter Property="Margin" Value="5,0,5,0" />
+                            <Setter Property="Padding" Value="0,0,0,0" />
+                            <Setter Property="MinHeight" Value="20" />
+                            <Setter Property="MinWidth" Value="0" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListViewItem">
+                                        <ListViewItemPresenter CheckBrush="{ThemeResource ListViewItemCheckBrush}"
+                                           ContentMargin="{TemplateBinding Padding}"
+                                           CheckMode="{ThemeResource ListViewItemCheckMode}"
+                                           ContentTransitions="{TemplateBinding ContentTransitions}"
+                                           CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}"
+                                           DragForeground="{ThemeResource ListViewItemDragForeground}"
+                                           DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
+                                           DragBackground="{ThemeResource ListViewItemDragBackground}"
+                                           DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
+                                           FocusVisualPrimaryBrush="{TemplateBinding FocusVisualPrimaryBrush}"
+                                           FocusVisualSecondaryThickness="{TemplateBinding FocusVisualSecondaryThickness}"
+                                           FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}"
+                                           FocusVisualMargin="{TemplateBinding FocusVisualMargin}"
+                                           FocusVisualPrimaryThickness="{TemplateBinding FocusVisualPrimaryThickness}"
+                                           FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}"
+                                           FocusVisualSecondaryBrush="{TemplateBinding FocusVisualSecondaryBrush}"
+                                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                           Control.IsTemplateFocusTarget="True"
+                                           PointerOverForeground="{ThemeResource ListViewItemForegroundPointerOver}"
+                                           PressedBackground="{StaticResource Button_Background}"
+                                           PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackground}"
+                                           PointerOverBackground="{StaticResource Button_Background}"
+                                           ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
+                                           SelectedPressedBackground="{StaticResource Button_Background}"
+                                           SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}"
+                                           SelectedForeground="LightBlue"
+                                           SelectedPointerOverBackground="{StaticResource Button_Background}"
+                                           SelectedBackground="WhiteSmoke"
+                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+
+            </Grid>
+
         </Canvas>
 
 
