--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -85,12 +85,18 @@
         <InkCanvas x:Name="annotations" x:FieldModifier="public" Grid.Column="1" />
 
         <!--insert text pop up-->
-        <Canvas x:Name="popupCanvas">
-            <RelativePanel x:Name="inputgrid" Canvas.ZIndex="99" Visibility="Collapsed">
+        <Canvas x:Name="popupCanvas" Grid.ColumnSpan="2">
+
+            <Button Style="{StaticResource ButtonStyle1}" x:Name="DeleteComment" Visibility="Collapsed" Background="White">
+                <SymbolIcon Foreground="PaleVioletRed" Symbol="Clear"/>
+            </Button>
+
+            <RelativePanel x:Name="inputgrid" Canvas.ZIndex="99" Visibility="Collapsed" >
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="45"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="150"/>
+                        <RowDefinition Height="90"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -99,24 +105,24 @@
                     <Grid Background="WhiteSmoke" CornerRadius="10" Grid.Row="0"
                             BorderThickness="1" BorderBrush="DarkGray">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="900"/>
                         </Grid.ColumnDefinitions>
 
-                        <Button Background="WhiteSmoke" Foreground="PaleVioletRed" Grid.Column="2" Grid.Row="1"
-                                Height="45"
-                                Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
-                                Click="InsertToEHR"
-                                RelativePanel.AlignRightWithPanel="True">
-                            <SymbolIcon Symbol="Add"/>
+                        <Button Background="WhiteSmoke" Foreground="PaleVioletRed" Grid.Column="0" Grid.Row="1"
+                                Height="60" Width="40"
+                                Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Left"
+                                Click="ClearInput"
+                                RelativePanel.AlignLeftWithPanel="True">
+                            <SymbolIcon Symbol="Clear"/>
                         </Button>
 
 
                         <!-- recongtion result of current line -->
-                        <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="5" HorizontalAlignment="Left"
-                                    Grid.Column="0"
-                                    Padding="5 0 5 0" />
+                        <StackPanel Name="curLineWordsStackPanel" Orientation="Horizontal" Spacing="6" HorizontalAlignment="Left"
+                                    RelativePanel.AlignLeftWithPanel="True"
+                                    Grid.Column="1"
+                                    Padding="10 0 10 0" />
 
                         <ListView Visibility="Collapsed" Padding="5 0 0 0"
                                   ScrollViewer.HorizontalScrollMode="Enabled"
@@ -136,22 +142,21 @@
                                     <TextBlock Text="{Binding}" VerticalAlignment="Center"></TextBlock>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
-                            <!--<ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                                <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                                <Setter Property="Margin" Value="0,0,5,0" />
-                                <Setter Property="Padding" Value="0,0,0,0" />
-                                <Setter Property="MinHeight" Value="20" />
-                                <Setter Property="MinWidth" Value="20" />
-                            </Style>
-                        </ListView.ItemContainerStyle>-->
                         </ListView>
+                        <Button Background="WhiteSmoke" Grid.Column="2" Grid.Row="1"
+                                Height="60" Width="90"
+                                Style="{StaticResource ButtonStyle1}" HorizontalAlignment="Right"
+                                Click="InsertToEHRClick"
+                                RelativePanel.AlignLeftWithPanel="True">
+                            <SymbolIcon Symbol="Add" Foreground="ForestGreen"/>
+                        </Button>
+
 
                     </Grid>
 
-                    <Grid Grid.Row="1" Background="WhiteSmoke" Margin="0 5 0 0" Width="800" Height="250" BorderBrush="DarkGray"
+                    <Grid Grid.Row="1" Background="WhiteSmoke" Margin="0 5 0 0" BorderBrush="DarkGray"
                           BorderThickness="1" CornerRadius="10" >
+                        <Canvas x:Name="inputCanvasbg" />
                         <InkCanvas x:Name="inputInkCanvas" />
                     </Grid>
                     
@@ -287,8 +292,7 @@
 
         </Canvas>
 
-
-        
+     
     </Grid>
 
 </UserControl>
