--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -435,7 +435,7 @@
                         RelativePanel.AlignBottomWithPanel="True"
                         RelativePanel.AlignTopWithPanel="True"
                         ZoomMode="Enabled" 
-                        MinZoomFactor="0.3" 
+                        MinZoomFactor="0.3"     
                         VerticalScrollMode="Enabled" 
                         VerticalScrollBarVisibility="Hidden" 
                         HorizontalScrollMode="Enabled" 
@@ -444,7 +444,7 @@
 
                 <Grid x:Name="EHROutputGrid">
 
-                    <Canvas x:Name="addinCanvasEHR" Canvas.ZIndex="5" />
+                    <Canvas x:Name="addinCanvasEHR" x:FieldModifier="public" Canvas.ZIndex="5" />
                 </Grid>
             </ScrollViewer>
 
