--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -22,14 +22,14 @@
             <Storyboard x:Name="EHRCommentSlidingAnimation">
                 <DoubleAnimation Storyboard.TargetName="addinSlide" 
                                  Storyboard.TargetProperty="X"
-                                 Duration="0:0:0.5">
+                                 Duration="0:0:0.3">
                     <DoubleAnimation.EasingFunction>
                         <CircleEase EasingMode="EaseOut" />
                     </DoubleAnimation.EasingFunction>
                 </DoubleAnimation>
                 <DoubleAnimation Storyboard.TargetName="addinSlide" 
                                  Storyboard.TargetProperty="Y"
-                                 Duration="0:0:0.5">
+                                 Duration="0:0:0.3">
                     <DoubleAnimation.EasingFunction>
                         <CircleEase EasingMode="EaseOut" />
                     </DoubleAnimation.EasingFunction>
@@ -83,12 +83,17 @@
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Grid.RenderTransform>
-                <TranslateTransform x:Name="addinSlide" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="40"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+
+                <Grid.RenderTransform>
+                <TranslateTransform x:Name="addinSlide" x:FieldModifier="public"/>
             </Grid.RenderTransform>
 
-
-            <Grid Name="contentGrid" Grid.Row="1">
+        <Grid Name="contentGrid" Grid.Row="1" Grid.ColumnSpan="2">
                 <!--<local:AddInImageControl Canvas.ZIndex="1" Visibility="Collapsed" x:Name="imageControl"/>-->
                 <ScrollViewer Canvas.ZIndex="2" Grid.Row="1" x:Name="scrollViewer" Visibility="Collapsed" ZoomMode="Enabled" 
                               MinZoomFactor="1" VerticalScrollMode="Enabled" 
@@ -103,8 +108,16 @@
                     </Grid>
                 </ScrollViewer>
             </Grid>
+            
+        <Button Style="{StaticResource ButtonStyle2}" Width="40" Height="150" 
+                x:Name="DeleteComment" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"
+                Canvas.ZIndex="999" Visibility="Collapsed"
+                Click="RemoveComment" Background="Transparent">
+            <SymbolIcon Foreground="PaleVioletRed" Symbol="Clear"/>
+        </Button>
 
-            <Grid Name="categoryGrid"  Grid.Row="1">
+
+        <Grid Name="categoryGrid" Grid.ColumnSpan="2" Grid.Row="1">
 
                 <StackPanel Name="SelectionStackPanel"  Width="200"  HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Click="DrawingButton_Click"  Name="DrawingButton" Height="{StaticResource categoryButtonHeight}">
@@ -121,7 +134,7 @@
 
 
 
-            <RelativePanel Grid.Row="0" Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
+        <RelativePanel Grid.ColumnSpan="2" Grid.Row="0" Name="TitleRelativePanel" Visibility="Visible" Background="WhiteSmoke">
                 <Button Style="{StaticResource MyButtonStyle}" Background="Transparent" Foreground="Gray" 
                     Height="48" VerticalAlignment="Top" Width="48" Padding="0" Name="deleteButton" Click="Delete_Click" Margin="0">
                     <SymbolIcon Symbol="Clear" Height="35" Width="35" Margin="-1,-1,-3,-3" HorizontalAlignment="Left"></SymbolIcon>
@@ -154,12 +167,12 @@
                 </Button>
             </RelativePanel>
 
-            <InkToolbar x:Name="inkToolbar" Background="LightGray"   Grid.Row="0" 
+        <InkToolbar x:Name="inkToolbar" Background="LightGray"   Grid.Row="0" Grid.ColumnSpan="2"
         VerticalAlignment="Center" Margin="0 0 48 0" Visibility="Collapsed"
         HorizontalAlignment="Right" 
         Orientation="Horizontal"   />
 
-            <Button Height="48" Width="48" Name="PhotoButton" Style="{StaticResource MyButtonStyle}"
+        <Button Height="48" Width="48" Name="PhotoButton" Style="{StaticResource MyButtonStyle}" Grid.ColumnSpan="2"
                 Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke" 
                 Grid.Row="0"  HorizontalAlignment="Right" Visibility="Collapsed" 
                 Margin="0 0 48 0">
@@ -167,13 +180,13 @@
             </Button>
 
             <!-- Photo service -->
-            <Grid Background="WhiteSmoke" Grid.Row="1"
+        <Grid Background="WhiteSmoke" Grid.Row="1" Grid.ColumnSpan="2"
               Name="CameraCanvas"
               RelativePanel.AlignRightWithPanel="True" Visibility="Collapsed">
                 <photovideoservice:PhotoVideoCaptureControl x:Name="captureControl"></photovideoservice:PhotoVideoCaptureControl>
             </Grid>
 
-            <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.9"  
+        <Grid Grid.Row="0" Grid.RowSpan="2" Background="White" Opacity="0.9"  Grid.ColumnSpan="2"
               Name="MovingGrid"  Visibility="Collapsed"
               Tapped="noImageManipulation_Tapped"
               ManipulationMode="TranslateX,TranslateY"
