--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -87,10 +87,10 @@
         <!--insert text pop up-->
         <Canvas x:Name="popupCanvas" Grid.ColumnSpan="2">
 
-            <Button Style="{StaticResource ButtonStyle1}" x:Name="DeleteComment" Visibility="Collapsed" 
+            <!--<Button Style="{StaticResource ButtonStyle1}" x:Name="DeleteComment" Visibility="Collapsed" 
                     Click="RemoveComment" Background="WhiteSmoke">
                 <SymbolIcon Foreground="PaleVioletRed" Symbol="Clear"/>
-            </Button>
+            </Button>-->
 
             <RelativePanel x:Name="inputgrid" Canvas.ZIndex="999" Visibility="Collapsed" >
                 <Grid>
@@ -167,7 +167,7 @@
             <StackPanel x:Name="SelectionMenu" Visibility="Collapsed" Spacing="10" Orientation="Vertical">
 
                 <Grid CornerRadius="10" BorderBrush="Gray" BorderThickness="1" Background="WhiteSmoke" HorizontalAlignment="Stretch">
-                    <Button Style="{StaticResource ButtonStyle1}" Width="170" Padding="20 10 20 10" Background="WhiteSmoke"                     
+                    <Button Style="{StaticResource ButtonStyle1}" Width="200" Padding="20 10 20 10" Background="WhiteSmoke"                     
                             HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                             Click="DeleteSelectedText">
                         <TextBlock x:Name="deleteText" Text="{x:Bind deleteState, Mode=TwoWay}" FontWeight="SemiBold" FontSize="18" />
@@ -175,7 +175,7 @@
                 </Grid>
 
                 <Grid CornerRadius="10" BorderBrush="Gray"  BorderThickness="1" Background="WhiteSmoke">
-                    <Button Style="{StaticResource ButtonStyle1}" Width="170" Padding="20 10 20 10" Background="WhiteSmoke"
+                    <Button Style="{StaticResource ButtonStyle1}" Width="200" Padding="20 10 20 10" Background="WhiteSmoke"
                             HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                             Click="HighlightSelectedText">
                         <TextBlock x:Name="highlightText" Text="{x:Bind highlightState, Mode=TwoWay}" FontWeight="SemiBold" FontSize="18" />
@@ -183,7 +183,7 @@
                 </Grid>
 
                 <Grid CornerRadius="10" BorderBrush="Gray" BorderThickness="1" Background="WhiteSmoke">
-                    <Button Style="{StaticResource ButtonStyle1}" Width="170" Padding="20 10 20 10" Background="WhiteSmoke"
+                    <Button Style="{StaticResource ButtonStyle1}" Width="200" Padding="20 10 20 10" Background="WhiteSmoke"
                         Click="AddComment"
                             HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
                         <TextBlock Text="Annotate" FontWeight="SemiBold" FontSize="18" />
@@ -193,7 +193,15 @@
             </StackPanel>
             
             <!--Copy/Paste pop up-->
-            <StackPanel x:Name="cpMenu" Visibility="Collapsed" Spacing="40" Orientation="Vertical"  >
+            <StackPanel x:Name="cpMenu" Visibility="Collapsed" Spacing="10" Orientation="Vertical"  >
+                <Grid CornerRadius="20" BorderThickness="2" BorderBrush="LightGray" Background="White">
+                    <Button Style="{StaticResource ButtonStyle1}" Background="WhiteSmoke"  Width="250" Height="100"
+                            Click="UndoOperation"
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                        <TextBlock Text="Undo" FontWeight="SemiBold" FontSize="30" />
+                    </Button>
+                </Grid>
+
                 <Grid CornerRadius="20" BorderThickness="2" BorderBrush="LightGray" Background="White">
                     <Button Style="{StaticResource ButtonStyle1}" Background="WhiteSmoke"  Width="250" Height="100"  
                             Click="CopyTextToClipboard"
@@ -203,13 +211,15 @@
                 </Grid>
 
                 <Grid CornerRadius="20" BorderThickness="2" BorderBrush="LightGray" Background="White">
-
                     <Button Style="{StaticResource ButtonStyle1}" Background="WhiteSmoke"  Width="250" Height="100"
                             Click="PasteTextToEHR"
                             HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
                         <TextBlock Text="Paste to end" FontWeight="SemiBold" FontSize="30" />
                     </Button>
                 </Grid>
+
+
+
             </StackPanel>
          
             <!--Cursor Icon Markup-->
